format: 根据prettier格式化代码

--- a/src/icons/iconfont/iconfont.css
+++ b/src/icons/iconfont/iconfont.css
@@ -1,8 +1,9 @@
 @font-face {
   font-family: "iconfont"; /* Project id 4628947 */
-  src: url('iconfont.woff2?t=1721632608876') format('woff2'),
-       url('iconfont.woff?t=1721632608876') format('woff'),
-       url('iconfont.ttf?t=1721632608876') format('truetype');
+  src:
+    url("iconfont.woff2?t=1721632608876") format("woff2"),
+    url("iconfont.woff?t=1721632608876") format("woff"),
+    url("iconfont.ttf?t=1721632608876") format("truetype");
 }
 
 .iconfont {
@@ -84,4 +85,3 @@
 .icon-poweroff:before {
   content: "\e634";
 }
-
