--- a/src/styles/shared.scss
+++ b/src/styles/shared.scss
@@ -11,19 +11,19 @@ body {
     @apply p-6;
     background-color: var(--page-bg-color);
     border-radius: 6px;
-    box-shadow: 0 0.25rem 1.125rem rgba(75, 70, 92, .1)
+    box-shadow: 0 0.25rem 1.125rem rgba(75, 70, 92, 0.1);
   }
 }
 
 @media (min-width: 1400px) {
-  .page-container{
+  .page-container {
     @apply mx-auto;
   }
 }
 
 .card {
   @apply bg-white rounded mb-6 flex flex-col;
-  box-shadow: 0 1px 2px rgba(56, 65, 74, .15);
+  box-shadow: 0 1px 2px rgba(56, 65, 74, 0.15);
 
   &.card-h-full {
     height: calc(100% - 1.5rem);
@@ -47,7 +47,7 @@ body {
 // 覆盖t-menu菜单样式
 .t-default-menu .t-menu__item.t-is-active:not(.t-is-opened) {
   background: linear-gradient(72.47deg, #7367f0 22.16%, rgba(115, 103, 240, 0.7) 76.47%);
-  box-shadow: 0px 2px 6px 0px rgba(115, 103, 240, .48);
+  box-shadow: 0px 2px 6px 0px rgba(115, 103, 240, 0.48);
   color: #fff !important;
 }
 
@@ -64,7 +64,6 @@ body {
 .scorpios-dialog {
   .t-dialog--default {
     padding: 20px 24px;
-
   }
 
   .t-dialog__header .t-dialog__header-content {
